<resources>
    <string name="app_name">Expireless</string>
    <string name="scan_again">Scan</string>
    <string name="select_expiration_date">Select Expiration Date:</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_txt">Quantity: </string>
    <string name="Add">Add</string>
    <string name="Enter_Item">Enter Item</string>
    <string name="Item">Item</string>
    <string name="Expiry_Date">Expiry Date</string>
    <string name="expires_txt">Expires: </string>
    <string name="storage">Storage</string>
    <string name="storage_txt">Storage: </string>
    <string name="Back">Back</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="Register">Register</string>
    <string name="Fridge">Fridge</string>
    <string name="Freezer">Freezer</string>
    <string name="Scanner">Scanner</string>
    <string name="Pantry">Pantry</string>
    <string name="Log_out">Log Out</string>
    <string name="new_item">New item (Manual)</string>
    <string-array name="Quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="Storage">
        <item>Fridge</item>
        <item>Freezer</item>
        <item>Pantry</item>
    </string-array>
</resources>
