<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    tools:context=".ItemEdit">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <ImageView
        android:id="@+id/ItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <EditText
        android:id="@+id/editItemName"
        style="editTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/Enter_Item"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ItemImage"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:hint="@string/select_expiration_date"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editItemName" />


    <Spinner
        android:id="@+id/SpinnerQuantity"
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/quantity"
        android:entries="@array/Quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintRight_toLeftOf="@id/SpinnerQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_txt" />

    <Spinner
        android:id="@+id/SpinnerStorage"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:entries="@array/Storage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/SpinnerQuantity"
        app:layout_constraintTop_toBottomOf="@+id/storage_txt" />

    <Button
        android:id="@+id/Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginRight="32dp"
        android:hint="@string/Update"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerStorage" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="160dp"
        android:hint="@string/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerQuantity" />

    <Button
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="150dp"
        android:hint="@string/Delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerQuantity" />

    <TextView
        android:id="@+id/quantity_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/quantity"
        app:layout_constraintBottom_toTopOf="@id/SpinnerQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiration_date"
        tools:ignore="MissingConstraints"
        tools:text="@string/quantity_txt" />

    <TextView
        android:id="@+id/storage_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/storage"
        app:layout_constraintBottom_toTopOf="@id/SpinnerStorage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/quantity_txt"
        app:layout_constraintTop_toBottomOf="@id/expiration_date"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:text="@string/storage_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>